# lidar-slam-and-exploration

./: README.md
ar_turtlebot3/: CMakeLists.txt  package.xml
ar_turtlebot3/launch/: ar_amcl.launch  ar_turtlebot3_navigation.launch  explore_maze.launch  explore_move.launch  explore_nav_config.launch  localisation.launch
ar_turtlebot3/maps/: map.yaml  map_real.pgm  map_real.yaml  turtlebot_world.yaml
ar_turtlebot3/meshes/: Maze.stl  maze.dae
brick/: model.config  model.sdf
brick_search/: CMakeLists.txt  package.xml
brick_search/src/: .main.cpp.swp  BrickSearch.cpp  BrickSearch.h  brick_search.cpp  brick_search.cpp.autosave  brick_search.h  brick_search_l.cpp  main.cpp
camera_ogmap/: CMakeLists.txt  package.xml
camera_ogmap/include/camera_ogmap/: camera_ray_tracer.h  map_transformer.h
camera_ogmap/launch/: explore_move.launch
camera_ogmap/src/: camera_ogmap.cpp  camera_ray_tracer.cpp  map_transformer.cpp
camera_ogmap/srv/: FreeSpace.srv
explore_move/: CMakeLists.txt  README.md  package.xml
explore_move/src/: explore_move.cpp  test_explore_move_path.cpp
explore_move/srv/: RequestMazePath.srv
maze_explorer/: CMakeLists.txt  package.xml
maze_explorer/map/: map.pgm
maze_explorer/src/: main.cpp  map.pgm  maze_explorer_node.cpp  maze_explorer_node.h
maze_explorer/srv/: RequestMazePath.srv
maze_planner/: CMakeLists.txt  package.xml
maze_planner/config/: map (copy).yaml  map.pgm  map.yaml  visualisation.rviz
maze_planner/include/maze_planner/: closed_set.h  marker.h  node.h  occupancy_grid.h  open_set.h  path_set.h
maze_planner/launch/: maze_planner.launch
maze_planner/src/: closed_set.cpp  marker.cpp  maze_planner.cpp  node.cpp  occupancy_grid.cpp  open_set.cpp  path_set.cpp
maze_planner/srv/: PlanPath.srv
saved_map/: map.yaml  turtlebot_world.pgm
slam_gmapping/gmapping/launch/: slam_gmapping_pr2.launch
slam_to_loc/: CMakeLists.txt  README.md  package.xml
slam_to_loc/launch/: slam_to_loc.launch
slam_to_loc/maps/: map_real.yaml  test_map.pgm  test_map.yaml
slam_to_loc/src/: map_saver.cpp  slam_to_loc_pose.cpp
turtlebot3/brick_search/: package.xml
turtlebot3/brick_search/src/: brick_search.cpp
turtlebot3/saved_map/: map.pgm
turtlebot3/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro
turtlebot3/turtlebot3_navigation/launch/: turtlebot3_navigation_run.launch
turtlebot3/turtlebot3_navigation/maps/: map_real.yaml
turtlebot3/turtlebot3_navigation/param/: dwa_local_planner_params_waffle.yaml
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_maze.launch  turtlebot3_maze_world.launch  turtlebot3_testworld.launch
turtlebot3_simulations/turtlebot3_gazebo/models/: gazebo-realsense
turtlebot3_simulations/turtlebot3_gazebo/models/D435/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_testworld/: model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/worlds/: maze.world  maze_world.world  turtlebot3_testworld.world
