<package format="2">

    <name>brick_search</name>
    <version>0.0.1</version>
    <description>ROS node search for a brick in a known map</description>
    <maintainer email="12542344@student.uts.edu.au">12542344</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>std_srvs</depend>
    <depend>actionlib</depend>
    <depend>move_base_msgs</depend>
    <depend>pcl_conversions</depend>

</package>
