<package format="2">

    <name>brick_search</name>
    <version>0.0.1</version>
    <description>ROS node search for a brick in a known map</description>
    <maintainer email="brenton.leighton@uts.edu.au">Brenton Leighton</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>std_srvs</depend>
    <depend>actionlib</depend>
    <depend>move_base_msgs</depend>

</package>
